re #16940: action menu fixes, gaps

--- a/docroot/css/pass.css
+++ b/docroot/css/pass.css
@@ -90,7 +90,7 @@ tr.ui-state-highlight {
 
 #pass-top-menu ul.portlet-action-menu li a {
     color: #686868;
-    padding: 0.5em 0.5em 0.25em 0.5em;
+    padding: 0.6em 0.5em 0.25em 0.5em;
     font-size: 1.1em;
     display: block;
     border-bottom: 3px solid transparent;
